--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <body>
   <header class="site-header">
-<a href="index.html" class="logo">ELENA SORIANO</a>
-    <nav class="main-nav">
+<div class="logo-wrap">
+  <a href="index.html" class="logo">ELENA SORIANO</a>
+  <a href="https://www.instagram.com/socarreret" class="insta" target="_blank">@socarreret</a>
+</div>    <nav class="main-nav">
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li class="has-dropdown">
@@ -90,4 +92,5 @@
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
