--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
           <ul class="dropdown">
             <li><a href="#travel">Travel</a></li>
             <li><a href="#people">People</a></li>
-            <li><a href="#brand">Brand / Product</a></li>
+            <li><a href="#brand">Brands</a></li>
             <li><a href="#events">Events</a></li>
           </ul>
         </li>
@@ -81,9 +81,9 @@
       </div>
     </section>
 
-    <!-- BRAND / PRODUCT -->
+    <!-- BRANDS -->
     <section id="brand" class="portfolio-section">
-    <h1>Brand / Product</h1>
+    <h1>Brands</h1>
       <div class="portfolio-grid">
         <div class="portfolio-item lightbox-trigger" data-full="img/brand1.jpg">
           <div class="photo-wrapper">
@@ -141,3 +141,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
