--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <ul class="dropdown">
             <li><a href="portfolio.html#travel">Travel</a></li>
             <li><a href="portfolio.html#people">People</a></li>
-            <li><a href="portfolio.html#brand">Brand / Product</a></li>
+            <li><a href="portfolio.html#brand">Brands</a></li>
             <li><a href="portfolio.html#events">Events</a></li>
           </ul>
         </li>
@@ -52,3 +52,4 @@
 
 </body>
 </html>
+
