--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main class="page home">
     <section class="hero-grid">
       <!-- Mezcla de tamaños diferentes, sin marcos -->
-      <div class="grid-item grid-item-large lightbox-trigger" data-full="img/home1.jpg">
+      <div class="grid-item lightbox-trigger" data-full="img/home1.jpg">
         <div class="photo-wrapper">
           <img src="img/home1.jpg" alt="Foto de portada 1">
         </div>
@@ -95,6 +95,7 @@
 </body>
 
 </html>
+
 
 
 
