--- a/about.html
+++ b/about.html
@@ -12,25 +12,30 @@
 </head>
 <body>
   <header class="site-header">
-<a href="index.html" class="logo">ELENA SORIANO</a>
-    <nav class="main-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li class="has-dropdown">
-          <a href="portfolio.html">Portfolio</a>
-          <ul class="dropdown">
-            <li><a href="portfolio.html#travel">Travel</a></li>
-            <li><a href="portfolio.html#people">People</a></li>
-            <li><a href="portfolio.html#brand">Brands</a></li>
-            <li><a href="portfolio.html#events">Events</a></li>
-          </ul>
-        </li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="logo-wrap">
+    <a href="index.html" class="logo">ELENA SORIANO</a>
+    <a href="https://www.instagram.com/socarraret" class="insta" target="_blank">@socarraret</a>
+  </div>
 
+  <nav class="main-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+
+      <li class="has-dropdown">
+        <a href="portfolio.html">Portfolio</a>
+        <ul class="dropdown">
+          <li><a href="portfolio.html#travel">Travel</a></li>
+          <li><a href="portfolio.html#people">People</a></li>
+          <li><a href="portfolio.html#brand">Brands</a></li>
+          <li><a href="portfolio.html#events">Events</a></li>
+        </ul>
+      </li>
+
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
   <main class="page about">
     <section class="about-inner">
       <h1>About</h1>
@@ -44,5 +49,6 @@
 
 </body>
 </html>
+
 
 
