--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <header class="site-header">
   <div class="logo-wrap">
     <a href="index.html" class="logo">ELENA SORIANO</a>
-    <a href="https://www.instagram.com/socarreret" class="insta" target="_blank">@socarreret</a>
+    <a href="https://www.instagram.com/socarraret" class="insta" target="_blank">@socarraret</a>
   </div>
 
   <nav class="main-nav">
@@ -22,7 +22,7 @@
       <li><a href="index.html">Home</a></li>
 
       <li class="has-dropdown">
-        <a href="portfolio.html" class="active">Portfolio</a>
+        <a href="portfolio.html">Portfolio</a>
         <ul class="dropdown">
           <li><a href="portfolio.html#travel">Travel</a></li>
           <li><a href="portfolio.html#people">People</a></li>
@@ -149,6 +149,7 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
