--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,15 @@
   <p class="contact-note">
     Happy to hear your ideas.
   </p>
+      <div class="contact-instagram">
+  <a href="https://www.instagram.com/socarraret" target="_blank" class="contact-insta-link">@socarraret</a>
+</div>
 </section>
   </main>
 
 </body>
 </html>
+
 
 
 
