--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>ELENA SORIANO</title>
+  <title>ELENA SORIANO - About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
