--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+   <footer class="site-footer">
+  <p>©2026 | ALL RIGHTS RESERVED | ELENASORIANOMARTINEZ@GMAIL.COM</p>
+</footer>
 <body>
   <header class="site-header">
   <div class="logo-wrap">
@@ -59,6 +62,7 @@
 
 </body>
 </html>
+
 
 
 
