--- a/portfolio.html
+++ b/portfolio.html
@@ -149,8 +149,12 @@
   </div>
 
   <script src="js/main.js"></script>
+  <footer class="site-footer">
+  <p>©2026 | ALL RIGHTS RESERVED | ELENASORIANOMARTINEZ@GMAIL.COM</p>
+</footer>
 </body>
 </html>
+
 
 
 
